# devdox-ai-context

./: .gitignore  .gitleaks.toml  .gitleaksbaseline  .gitleaksignore  Dockerfile  README.md  pyproject.toml  pytest.ini  readme.md  sonar-project.properties
.github/workflows/: build.yml
app/: .env  .env.example  Dockerfile  health.py  main.py
app/core/: config.py  container.py  mail_container.py
app/core/exceptions/: base.py  custom_exceptions.py  exception_constants.py  local_exceptions.py
app/exceptions/: base_exceptions.py
app/handlers/: job_tracker.py  message_handler.py  queue_worker.py
app/handlers/utils/: constants.py  git_managers.py  repo_fetcher.py  swagger_utils.py
app/infrastructure/assessment/: qna_generator.py  qna_models.py  qna_utils.py
app/infrastructure/database/: repositories.py
app/infrastructure/external_apis/: git_clients.py
app/infrastructure/job_tracer/: job_trace_metadata.py  trace_formatter.py
app/infrastructure/mailing_service/: __init__.py  client.py  client_test_double.py  email_core_service.py  models.py
app/infrastructure/mailing_service/client/: client.py
app/infrastructure/mailing_service/exception/: exception_constants.py  mail_exceptions.py
app/infrastructure/mailing_service/models/: base_models.py  base_preview_models.py  base_preview_router.py  context_shapes.py
app/infrastructure/mailing_service/service/: email_service.py  interfaces.py  template_resolver.py
app/infrastructure/mailing_service/test_doubles/: base.py  client.py  email_service.py
app/infrastructure/qna/: qna_generator.py  qna_models.py  qna_utils.py
app/infrastructure/queues/: supabase_queue.py
app/schemas/: job_trace_metadata.py  processing_result.py  repo.py
app/services/: auth_service.py  email_service.py  hybrid_loctus_generator.py  locust_generator.py  processing_service.py
app/templates/email/: project_analysis_failure.html  project_analysis_failure.txt  project_analysis_success.html  project_analysis_success.txt  project_qna.html  project_qna.txt
tests/: conftest.py  utils.py
tests/unit/: test_auth_service.py  test_config.py  test_edge_cases.py  test_exceptions.py  test_health.py  test_main.py  test_message_handler.py  test_processing_service.py  test_queue_service.py  test_queue_worker.py  test_repositories.py  test_schemas.py
tests/unit/app/: test_main.py
tests/unit/app/handlers/: test_job_tracker.py
tests/unit/app/infrastructure/: test_repositories.py
tests/unit/app/infrastructure/external_apis/: test_git_clients.py
tests/unit/app/infrastructure/job_tracer/: test_job_trace_metadata.py  test_trace_formatter.py
tests/unit/app/infrastructure/mailing_service/: test_client.py  test_client_test_double.py
tests/unit/app/infrastructure/mailing_service/client/: test_client.py
tests/unit/app/infrastructure/mailing_service/models/: test_base_models.py  test_base_preview_router.py
tests/unit/app/infrastructure/mailing_service/service/: test_email_service.py
tests/unit/app/infrastructure/mailing_service/test_doubles/: test_base_test_double.py  test_client.py  test_email_service_test_double.py
tests/unit/app/infrastructure/qna/: conftest.py  test_qna_generator.py  test_qna_utils.py
tests/unit/app/infrastructure/queues/: test_supabase_queue.py
tests/unit/app/services/: test_email_service.py
tests/unit/tests/test_doubles/: test_mailing_service.py
