[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devdox-ai-context"
version = "0.0.1"
description = "Queue Worker Service for DevDox AI Context Processing"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asyncio",
    "asyncpg==0.29.0",
    "tortoise-orm==0.24.0",
    "fastapi-mail==1.4.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "uvicorn==0.34.2",
    "uvloop==0.21.0;sys_platform != 'win32'",
    "pydantic==2.11.4",
    "pydantic-settings==2.5.2",
    "starlette>=0.37.2",
    "supabase==2.16.0",
    "redis==5.0.1",
    "tembo-pgmq-python==0.10.0",
    "requests==2.32.4",
    "structlog==23.2.0",
    "prometheus-client==0.19.0",
    "httpx==0.28.1",
    "dependency-injector==4.48.1",
    "cryptography==44.0.3",
    "aerich==0.9.1",
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langchain-mongodb==0.6.1",
    "langchain-together==0.3.0",
    "together==1.5.17",
    "tiktoken==0.7",
    "devdox-ai-models @ git+https://github.com/montymobile1/devdox-ai-models.git@93fa32a",
    "devdox-ai-git @ git+https://github.com/montymobile1/devdox-ai-git@e36ee1a",
    "devdox-ai-encryption @ git+https://github.com/montymobile1/devdox-ai-encryption.git@4eefae1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio==1.1.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",

]

[project.scripts]
devdox-worker = "app.main:main"
devdox-context-worker = "app.worker:start_worker"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "models_src*"]


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "models"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
